added user, bearer auth, swagger doc
